PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-71_addition_gauche_invalid/gcc-compile.txt
input.c: In function ‘main’:
input.c:4:8: error: lvalue required as left operand of assignment
    4 |     a+b=b;
      |        ^

return code: 1
